<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Tasks</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="tel">Telephone</string>
    <string name="list_tasks">List Tasks</string>
    <string name="menu">Menu</string>
    <string name="option_1">Option 1</string>
    <string name="add_new_task">New Task</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment home</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date_de_debut">Date de début</string>
    <string name="date_de_fin">Date de fin</string>
    <string name="save">Save</string>
    <string name="titre_item">Titre :</string>
    <string name="date_item">Date :</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date">date</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload">Upload</string>
    <string name="update_task">update Task</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="icon_add_new_event">icon add new event</string>
    <string name="events">Event</string>
    <string name="add_event">Create Event</string>
    <string name="category">Category</string>
    <string name="lieu">Lieu</string>
    <string name="item_date">3/15/2024-4/15/2001</string>
    <string name="en_cours">En cours</string>
    <string name="update_event">Update Event</string>
    <string name="start_with">Start with</string>
    <string name="heur">00:00 PM</string>
    <string name="select_a_day">Select a day</string>
    <string name="item_card_date">27.09.2024</string>
    <string name="ismail_telhouni">Ismail telhouni</string>
    <string name="ismailtelhouni123_gmail_com">ismailtelhouni123@gmail.com</string>
    <string name="informaiton">Informaiton</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="about_our_app">About Our App</string>
    <string name="data">This is a brief description of our application. You can provide information about its purpose, features, etc.</string>
    <string name="item_change_password">Change Password :</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_your_password">Forget password ?</string>
    <string name="reset_password">Provide your account s email for which you want to reset your password </string>
    <string name="send">Send</string>
    <string name="notes">Notes</string>
    <string name="add_new_notes">Add new Notes</string>
    <string name="new_note">New note</string>
    <string name="travel_menu">Travel</string>
    <string name="favorite">favoris</string>
    <string name="new_event">New event</string>
    <string name="note_date">14 Apr. 2024 , 19:27</string>
    <string name="add_password">Add password</string>
    <string name="option">Option</string>
    <string name="task">Task</string>
    <string name="note">Note</string>
    <string name="tasks">Tasks</string>
    <string-array name="task_etats">
        <item>finish</item>
        <item>pending</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
</resources>