<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.event.EventFragment">

    <RelativeLayout
        android:id="@+id/item_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        tools:ignore="UselessParent"
        >
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/event5"
            android:contentDescription="@string/upload_image"
            android:layout_below="@+id/item_title"
            />
        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_date"
            android:layout_toStartOf="@+id/item_status"
            android:layout_below="@+id/item_description"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/item_date_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_cours"
            android:layout_toStartOf="@+id/item_status"
            android:layout_below="@+id/item_image"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/item_lieu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lieu"
            android:layout_below="@+id/item_image"
            android:layout_toEndOf="@+id/item_icon"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            />
        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_location_on_24"
            android:layout_below="@+id/item_image"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/lieu" />
        <ImageView
            android:id="@+id/item_status"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_adjust_24"
            android:layout_below="@+id/item_image"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/description"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_below="@+id/item_icon"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:id="@+id/item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_below="@+id/item_description"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"

            >
            <Button
                android:id="@+id/btn_edit_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                />
            <Button
                android:id="@+id/btn_delete_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />

</FrameLayout>