<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewTaskFragment">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center"
       tools:ignore="UselessParent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_task"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginBottom="35dp"
            />
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="2dp"
           android:layout_marginHorizontal="20dp"
           app:boxCornerRadiusBottomEnd="10dp"
           app:boxCornerRadiusBottomStart="10dp"
           app:boxCornerRadiusTopEnd="10dp"
           app:boxCornerRadiusTopStart="10dp"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/title"
               android:hint="@string/title"
               android:inputType="text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

           </com.google.android.material.textfield.TextInputEditText>
       </com.google.android.material.textfield.TextInputLayout>
       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="200dp"
           android:layout_marginHorizontal="20dp"
           android:layout_marginVertical="10dp">

           <ImageButton
               android:id="@+id/image_upload"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/rounded_border"
               android:contentDescription="@string/upload_image"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/upload"
               android:textStyle="bold"
               android:layout_gravity="center"
               android:textColor="@color/gray" />
       </FrameLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="2dp"
           android:layout_marginHorizontal="20dp"
           app:boxCornerRadiusBottomEnd="10dp"
           app:boxCornerRadiusBottomStart="10dp"
           app:boxCornerRadiusTopEnd="10dp"
           app:boxCornerRadiusTopStart="10dp"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/description"
               android:hint="@string/description"
               android:inputType="text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

           </com.google.android.material.textfield.TextInputEditText>
       </com.google.android.material.textfield.TextInputLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:baselineAligned="false">
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginBottom="2dp"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="5dp"
               app:boxCornerRadiusBottomEnd="10dp"
               app:boxCornerRadiusBottomStart="10dp"
               app:boxCornerRadiusTopEnd="10dp"
               app:boxCornerRadiusTopStart="10dp"
               >
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/date_de_debut"
                   android:hint="@string/date_de_debut"
                   android:inputType="date"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

               </com.google.android.material.textfield.TextInputEditText>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginBottom="2dp"
               android:layout_marginStart="5dp"
               android:layout_marginEnd="20dp"
               app:boxCornerRadiusBottomEnd="10dp"
               app:boxCornerRadiusBottomStart="10dp"
               app:boxCornerRadiusTopEnd="10dp"
               app:boxCornerRadiusTopStart="10dp"
               >
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/date_de_fin"
                   android:hint="@string/date_de_fin"
                   android:inputType="date"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

               </com.google.android.material.textfield.TextInputEditText>
           </com.google.android.material.textfield.TextInputLayout>
       </LinearLayout>

       <ProgressBar
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/progressBar"
           android:visibility="gone"
           />
       <Button
           android:id="@+id/btn_save_task"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/save"
           android:layout_marginTop="20dp"
           />



   </LinearLayout>

</FrameLayout>