<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.event.EventsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:textSize="20sp"
            android:autofillHints="creditCardExpirationDate"
            android:inputType="text" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:visibility="gone"
            >
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_add_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp"
            android:contentDescription="@string/icon_add_new_event"
            android:src="@drawable/add24px"
            android:text="@string/add_new_task"
            android:background="@drawable/rounded_btn_add_event"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/events_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/search"
            />
    </RelativeLayout>

</FrameLayout>